refactor: 移除导航链接和联系信息，更新广告配置
简化页面结构，移除不再需要的导航链接和联系信息
更新app-ads.txt中的Google AdMob配置信息

--- a/index.html
+++ b/index.html
@@ -334,11 +334,6 @@
                     <span>Shipping ideas into reality · Since 2026</span>
                 </div>
             </div>
-            <nav class="nav" aria-label="Primary">
-                <a href="#projects">Projects</a>
-                <a href="#principles">Principles</a>
-                <a href="#contact">Contact</a>
-            </nav>
         </div>
     </header>
 
@@ -350,10 +345,6 @@
                 DearDoor Studio is my home base for building a series of apps and web tools starting in 2026.
                 I use small, real products to practice unity of knowledge and action: learn, implement, iterate.
             </p>
-            <div class="actions">
-                <a class="button" href="#projects">Browse projects</a>
-                <a class="button secondary" href="mailto:support@deardoor.com">Email support@deardoor.com</a>
-            </div>
         </section>
 
         <section id="projects" class="section">
@@ -396,9 +387,8 @@
         </section>
 
         <section id="contact" class="section">
-            <h3>Contact</h3>
+            <h3>Link</h3>
             <div class="panel">
-                <p>Support & collaboration: <a href="mailto:support@deardoor.com">support@deardoor.com</a></p>
                 <p>Ad network verification: <a href="/app-ads.txt">app-ads.txt</a></p>
             </div>
         </section>
@@ -407,10 +397,6 @@
     <footer class="footer">
         <div class="container footer-inner">
             <div>© 2026 DearDoor Studio</div>
-            <div>
-                <a href="#projects">Projects</a> ·
-                <a href="#contact">Contact</a>
-            </div>
         </div>
     </footer>
 </body>
