docs(隐私政策): 更新应用隐私政策内容并删除旧版本
更新了 I'm Smoke-Free 应用的隐私政策，详细说明了数据收集和使用方式
删除了旧的中文版隐私政策文件

--- a/im-smoke-free/privacy.html
+++ b/im-smoke-free/privacy.html
@@ -1,16 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>隐私政策 - DearDoor</title>
+    <title>Privacy Policy - I'm Smoke-Free</title>
 </head>
 <body>
-    <h1>隐私政策</h1>
-    <p>生效日期：2026年1月2日</p>
-    <p>DearDoor Studio 尊重并保护所有用户的个人隐私...</p>
-    <h2>一、信息收集</h2>
-    <p>我们的部分应用可能包含由 Google AdMob 或 穿山甲 提供的广告服务，这些服务可能会收集您的设备 ID 用于广告精准投放。</p>
-    <h2>二、付费去广告</h2>
-    <p>如果您通过内购购买了“去除广告”服务，我们将停止相关广告标识符的追踪。</p>
+    <h1>Privacy Policy</h1>
+    <p>Effective date: January 2, 2026</p>
+
+    <p>
+        I'm Smoke-Free (the "App") is developed and operated by DearDoor Studio ("we", "us", or "our").
+        This Privacy Policy explains what information the App uses and how it is handled.
+        The App is designed as a personal tool to help you track your smoke-free time,
+        estimate money saved, and illustrate potential health benefits based on public
+        information from the World Health Organization (WHO).
+    </p>
+
+    <h2>1. What this app does</h2>
+    <p>
+        I'm Smoke-Free helps you record your quit date and smoking history, and then
+        calculates:
+    </p>
+    <ul>
+        <li>How long you have stayed smoke-free.</li>
+        <li>How much money you may have saved by not buying cigarettes.</li>
+        <li>
+            A theoretical view of health improvement milestones, inspired by WHO and
+            other public health information (for example: heart and lung benefits over time).
+        </li>
+    </ul>
+
+    <h2>2. Data you enter</h2>
+    <p>To provide these calculations, the App allows you to manually enter information such as:</p>
+    <ul>
+        <li>Your quit date or time you stopped smoking.</li>
+        <li>Your previous smoking habits (for example, cigarettes per day or packs per week).</li>
+        <li>Approximate price of cigarettes in your region.</li>
+        <li>Optional settings related to how the app calculates money saved and milestones.</li>
+    </ul>
+    <p>
+        All of this information is entered by you. You can review, update, or delete it at any time
+        inside the App (depending on the features available in your current version).
+    </p>
+
+    <h2>3. No personally identifiable information</h2>
+    <p>
+        The App is intentionally designed to work without collecting information that directly
+        identifies you. In particular:
+    </p>
+    <ul>
+        <li>We do not ask for your real name, email address, phone number, postal address, or ID number.</li>
+        <li>We do not access your contacts, photos, messages, or other personal content on your device.</li>
+        <li>We do not require you to create an account or log in.</li>
+    </ul>
+
+    <h2>4. Where your data is stored</h2>
+    <p>
+        All data you enter in I'm Smoke-Free is stored locally on your device.
+        It is used only inside the App to perform calculations and display your progress.
+        We do not operate separate servers that receive or store your personal progress data.
+    </p>
+    <p>
+        Depending on your device settings, your data may be included in system-level backups
+        (for example, iCloud, Google backup, or other vendor backup services).
+        Those backups are controlled by your operating system provider, and their privacy
+        policies apply to that backup process.
+    </p>
+
+    <h2>5. Analytics, advertising, and third-party services</h2>
+    <p>
+        The current version of I'm Smoke-Free does not include in-app advertising and does not
+        integrate third-party analytics SDKs that track you across apps or websites.
+    </p>
+    <p>
+        If this changes in a future version, we will update this Privacy Policy and clearly
+        describe what information is collected, for what purpose, and how you can control it.
+    </p>
+
+    <h2>6. Data retention and deletion</h2>
+    <p>
+        Your smoke-free history and settings are kept on your device for as long as you use the App.
+        You can usually reset your data from within the App (if a reset option is available),
+        or remove all app data by uninstalling the App from your device.
+    </p>
+
+    <h2>7. Children</h2>
+    <p>
+        I'm Smoke-Free is a utility app focused on health-related self-tracking for adults.
+        It is not designed for children under the age that applies in your region
+        (for example, under 13 years old in many countries).
+    </p>
+
+    <h2>8. Changes to this policy</h2>
+    <p>
+        We may update this Privacy Policy from time to time to reflect changes in the App
+        or in applicable laws. When we make important changes, we will update the "Effective date"
+        at the top of this page. In some cases, we may also notify you inside the App.
+    </p>
+
+    <h2>9. Contact</h2>
+    <p>
+        If you have any questions, feedback, or privacy-related requests about I'm Smoke-Free,
+        you can contact us at:
+    </p>
+    <p>
+        Email: <a href="mailto:support@madeincoder.com">support@madeincoder.com</a>
+    </p>
     </body>
 </html>
