--- a/index.html
+++ b/index.html
@@ -353,23 +353,25 @@
                 <div class="grid">
                     <article class="project">
                         <div class="project-header">
-                            <div class="project-title">No More Smoke</div>
-                            <div class="badge">policy</div>
+                            <div class="project-title">I'm Smoke-Free</div>
+                            <div class="badge">iOS</div>
                         </div>
                         <p>A tiny habit companion focused on quitting smoking.</p>
                         <div class="project-links">
-                            <a href="/no-more-smoke/zh-Hans/privacy.html">Privacy policy</a>
+                            <a href="/im-smoke-free/index.html">Website</a>
+                            <a href="/im-smoke-free/privacy.html">Privacy policy</a>
                         </div>
                     </article>
 
                     <article class="project">
                         <div class="project-header">
-                            <div class="project-title">Next apps</div>
-                            <div class="badge">soon</div>
+                            <div class="project-title">Tomato-Mac</div>
+                            <div class="badge">macOS</div>
                         </div>
-                        <p>This page will become the entry point to everything I ship.</p>
+                        <p>A macOS menu bar Pomodoro timer with white noise and daily stats.</p>
                         <div class="project-links">
-                            <a href="#contact">Suggest an idea</a>
+                            <a href="/tomato/index.html">Website</a>
+                            <a href="/tomato/privacy.html">Privacy policy</a>
                         </div>
                     </article>
                 </div>
